# AI_diet

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
api/: pyproject.toml
api/alembic/: README.md  env.py
api/alembic/versions/: 0001_baseline.py  0002_users_and_refresh_tokens.py  0003_consents.py  0004_consents_automated_decision.py  0005_users_health_profile.py  0006_meals.py  0007_meals_image_key.py  0008_meals_parsed_items.py  0009_meals_idempotency_key.py  0010_food_nutrition_and_aliases.py  0011_knowledge_chunks.py  0012_create_meal_analyses.py  0013_users_notification_settings.py  0014_create_notifications.py  0015_users_macro_goal.py  0016_users_profile_updated_at.py  0017_users_deletion_reason_idx.py  0018_subscriptions.py  0019_payment_logs.py  0020_payment_logs_event_unique.py  0021_admin_users_search_indexes.py  0022_create_audit_logs.py  0023_meal_analyses_used_llm_openai_only.py
api/app/: main.py
api/app/adapters/: __init__.py  anthropic_adapter.py  expo_push.py  google_oauth.py  llm_router.py  mfds_openapi.py  openai_adapter.py  r2.py  toss.py
api/app/api/: __init__.py  deps.py
api/app/api/v1/: __init__.py  admin.py  analysis.py  auth.py  consents.py  legal.py  meals.py  meals_images.py  notifications.py  payments.py  reports.py  users.py
api/app/core/: config.py  exceptions.py  idempotency.py  logging.py  masking.py  middleware.py  observability.py  proxy.py  security.py  sentry.py
api/app/db/: __init__.py  base.py  session.py
api/app/db/models/: __init__.py  audit_log.py  consent.py  food_alias.py  food_nutrition.py  knowledge_chunk.py  meal.py  meal_analysis.py  notification.py  payment_log.py  refresh_token.py  subscription.py  user.py
api/app/domain/: __init__.py  ad_expression_guard.py  allergens.py  bmr.py  fit_score.py  health_profile.py  insights.py  kdris.py  legal_documents.py  macro_goal.py
api/app/graph/: __init__.py  checkpointer.py  deps.py  edges.py  pipeline.py  state.py
api/app/graph/nodes/: __init__.py  _feedback_postprocess.py  _wrapper.py  evaluate_fit.py  evaluate_retrieval_quality.py  fetch_user_profile.py  generate_feedback.py  parse_meal.py  request_clarification.py  retrieve_nutrition.py  rewrite_query.py
api/app/graph/prompts/: __init__.py  feedback.py
api/app/rag/: __init__.py
api/app/rag/chunking/: __init__.py  html.py  markdown.py  pdf.py
api/app/rag/food/: __init__.py  search.py  (+4 more)
api/app/services/: __init__.py  analysis_service.py  audit_service.py  data_export_service.py  feedback_summary.py  meal_analysis_persistence.py  notification_service.py  payment_service.py  report_service.py  sse_emitter.py
api/app/workers/: __init__.py  nudge_scheduler.py  scheduler.py  soft_delete_purge.py  subscription_expire.py
api/data/: README.md  mfds_food_nutrition_seed.csv
api/data/guidelines/: README.md  kda-macronutrient.md  kdca-diabetes-diet.md  kdris-2020-amdr.md  kdris-2020-protein.md  kosso-2024-weight-loss.md  mfds-allergens-22.md
api/tests/: conftest.py  test_auth_router.py  test_auth_security.py  test_config.py  test_consents_deps.py  test_consents_router.py  test_dependency_versions.py  test_email_mask.py  test_exceptions_analysis.py  test_exceptions_payments.py  test_food_nutrition_aliases_schema.py  test_food_seed_exceptions.py  test_guideline_seed_exceptions.py  test_health.py  test_idempotency.py  test_knowledge_chunks_schema.py  test_korean_foods_dataset.py  test_korean_foods_eval.py  test_legal_router.py  test_main_lifespan.py  test_meal_analyses_schema.py  test_meal_analysis_summary_schema.py  test_meals_idempotency_key_schema.py  test_meals_images_router.py  test_meals_router.py  test_openai_adapter.py  test_problem_details.py  test_pyproject_psycopg.py  test_r2_adapter.py  test_sentry_mask.py  test_subscriptions_payment_logs_schema.py  test_users_me.py  test_users_profile_router.py
api/tests/adapters/: test_anthropic_adapter.py  test_expo_push.py  test_llm_router.py  test_mfds_openapi.py  test_openai_embeddings.py  test_supabase_storage.py  test_toss.py
api/tests/alembic/: test_alembic_0022_round_trip.py
api/tests/api/: test_admin_routes_audit_coverage.py  test_audit_admin_action_dep.py
api/tests/core/: test_admin_ip_allowlist.py  test_masking.py  test_observability.py  test_observability_tracing.py  test_proxy.py
api/tests/data/: korean_foods_100.json
api/tests/db/: test_audit_log_append_only.py  test_notifications_table.py  test_user_notification_columns.py  test_users_deletion_reason_and_index.py  test_users_macro_goal.py  test_users_profile_updated_at.py
api/tests/domain/: test_ad_expression_guard.py  test_allergens.py  test_bmr.py  test_fit_score.py  test_fit_score_allergen_22.py  test_health_profile.py  test_insights.py  test_kdris.py  test_legal_documents.py  test_macro_goal.py
api/tests/fixtures/: __init__.py  _build_pdf_fixture.py  sample-guideline.html
api/tests/graph/: conftest.py  test_checkpointer.py  test_edges.py  test_node_resilience.py  test_pipeline.py  test_pipeline_perf.py  test_self_rag.py  test_state.py
api/tests/integration/: test_bootstrap_seed.py  test_verify_allergy_22.py
api/tests/perf/: test_sse_t5_kpi.py  test_vision_hallucination_rate.py
api/tests/rag/: test_chunking_html.py  test_chunking_markdown.py  test_chunking_pdf.py  test_food_aliases_seed.py  test_food_normalize.py  test_food_search.py  test_food_search_perf.py  test_food_search_performance.py  test_food_seed.py  test_guideline_search.py  test_guideline_seed.py  test_knowledge_chunk_search.py
api/tests/scripts/: _smoke_meal_image_e2e.py  _smoke_supabase_storage.py  test_cleanup_idempotency_keys.py  test_promote_admin.py  test_upload_eval_dataset.py
api/tests/services/: test_analysis_service.py  test_audit_service.py  test_data_export_service.py  test_feedback_summary.py  test_meal_analysis_persistence.py  test_notification_service.py  test_payment_service.py  test_report_service.py  test_sse_emitter.py
api/tests/workers/: test_nudge_scheduler.py  test_scheduler.py  test_soft_delete_purge.py  test_subscription_expire.py
(+257 files in other folders)
