[project]
name = "balancenote-api"
version = "0.1.0"
description = "BalanceNote API — FastAPI + LangGraph Self-RAG"
requires-python = ">=3.13"
dependencies = [
    # --- Web framework ---
    "fastapi[standard]>=0.115",
    # --- LangChain / LangGraph ---
    "langgraph>=1.1.9",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "langsmith>=0.3",
    # --- DB / ORM ---
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic-settings>=2.7",
    # --- Infra / utils ---
    "redis>=5.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "sentry-sdk>=2.20",
    "structlog>=25.1",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "slowapi>=0.1.9",
    "apscheduler>=3.11",
    "sse-starlette>=2.2",
    "google-auth>=2.36",
    "boto3>=1.36",
    # --- LLM Vision (Story 2.3 — OpenAI Vision OCR / structured outputs) ---
    "openai>=1.55",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
ignore = []

# Story 1.3: legal_documents.py는 한·영 약관 풀텍스트를 모듈 const로 임베드 — 본문 단락은
# 한 줄당 한 단락을 유지해 PR diff 가시성과 자연어 정확성을 우선한다(line-length 무시).
[tool.ruff.lint.per-file-ignores]
"app/domain/legal_documents.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.13"
plugins = ["pydantic.mypy"]
mypy_path = "."

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*", "pgvector.*", "slowapi.*", "apscheduler.*", "google.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term --cov-fail-under=70"
testpaths = ["tests"]

[tool.coverage.run]
# Story 1.2부터 security.py / exceptions.py가 채워지므로 omit 비움.
# 신규 모듈(adapters, api/deps, api/v1/auth, api/v1/users, db/models/*) 모두 측정 대상.
omit = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
